--- a/html/index.html
+++ b/html/index.html
@@ -23,6 +23,6 @@
     <div id=app></div>
     <script src=../js/chunk-vendors.42768adf.js> </script> <script src=../js/app.4c0359ee.js> </script>
 </body>
-<script src="http://webapi.amap.com/maps?v=1.4.15&key=32dc7086888a2ff62579b2d388e79a7b"></script>
+<script src="../js/map.js"></script>
 <script src=https://open.ys7.com/sdk/js/2.0/ezuikit.js> </script>
 </html>
